# watercrawl-openai

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/watercrawl_openai/: __init__.py  plugins.py  settings.py
